syntax = "proto3";

option go_package = "backend/pkg/api/v1";

package v1;

service ChatService {
    rpc JoinChannel(Channel) returns (stream Message) {}
    rpc SendMessage(stream Message) returns (MessageAck) {}
}

message Channel {
    string name = 1;
    string senders_name = 2;
}

message Message {
    string sender = 1;
    Channel channel = 2;
    string message = 3;
}

message MessageAck {
    string status = 1;
}
